--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.543.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
