--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.1.12",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
@@ -18,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
