--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "tailwindcss": "^4.1.12"
